themes/hugo-theme-codex/assets/css/clipboard.css
.clipboard-button {
    position: absolute;
    right: 0;
    padding: 5px 7px 3px 7px;
    margin: 5px;
    color: #767676;
    background-color: #ededed;
    border: 1px solid #ededed;
    border-radius: 4px;
    font-size: 0.8em;
    z-index: 1;
    opacity: 1;
    transition: 0.1s;
  }
  .clipboard-button > svg {
    fill: #767676;
  }
  .clipboard-button:hover {
    cursor: pointer;
    border-color: #696969;
    background-color: #e0e0e0;
    border: 1px solid;
  }
  .clipboard-button:hover > svg {
    fill: #696969;
  }
  .clipboard-button:focus {
    outline: 0;
  }
  .highlight {
    position: relative;
  }
  .highlight:hover > .clipboard-button {
    opacity: 1;
    transition: 0.2s;
  }
  

